chore: Change application name

--- a/.secretariumrc.json
+++ b/.secretariumrc.json
@@ -10,8 +10,8 @@
             "root": "/sc/sem"
         },
         {
-            "name": "Semaphore",
-            "root": "lib/different.ssc"
+            "name": "Vickrey Auction",
+            "root": "lib/vickrey.ssc.ts"
         },
         {
             "name": "Amlytic",
