--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
   "main": "index.js",
   "repository": "https://github.com/secretarium/cc-example.git",
   "author": "Florian Guitton <2495155+fguitton@users.noreply.github.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "stac ."
+  },
+  "devDependencies": {
+    "@secretarium/trustless-app": "0.3.2",
+    "assemblyscript": "^0.19.3"
+  }
 }
