--- a/sc/sem/tsconfig.json
+++ b/sc/sem/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "assemblyscript/std/assembly.json",
+    "extends": "../../node_modules/@klave/sdk/sdk.json",
     "compilerOptions": {
         "forceConsistentCasingInFileNames": true
     },
