--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@klave/sdk": "0.4.5",
-    "assemblyscript": "^0.27.5"
+    "assemblyscript": "^0.27.5",
+    "json-as": "0.5.36",
+    "visitor-as": "0.11.4"
   }
 }
