--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@klave/sdk": "dev",
+    "as-base64": "0.2.0",
     "assemblyscript": "^0.27.5",
     "json-as": "0.5.23",
     "visitor-as": "0.11.4",
