--- a/asconfig.json
+++ b/asconfig.json
@@ -4,7 +4,7 @@
         "disable": "bulk-memory",
         "exportRuntime": true,
         "transform": [
-            "json-as/transform"
+            "@klave/as-json/transform"
         ]
     }
 }
