--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "build": "stac ."
   },
   "devDependencies": {
-    "@klave/sdk": "dev",
+    "@klave/sdk": "0.7.0-dev.6",
     "as-base64": "0.2.0",
-    "assemblyscript": "^0.27.5",
-    "json-as": "0.5.23",
+    "assemblyscript": "^0.27.9",
     "visitor-as": "0.11.4",
-    "typescript": "5.0.4"
+    "typescript": "5.2.2"
   }
 }
