--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "stac ."
   },
   "devDependencies": {
-    "@klave/sdk": "0.7.0-dev.6",
+    "@klave/sdk": "0.8.0",
     "as-base64": "0.2.0",
     "assemblyscript": "^0.27.9",
     "visitor-as": "0.11.4",
