--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build": "stac ."
   },
   "devDependencies": {
-    "@klave/sdk": "0.4.5",
-    "assemblyscript": "^0.27.5"
+    "@klave/sdk": "dev",
+    "as-base64": "0.2.0",
+    "assemblyscript": "^0.27.5",
+    "json-as": "0.5.23",
+    "visitor-as": "0.11.4",
+    "typescript": "5.0.4"
   }
 }
