--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "build": "stac ."
   },
   "devDependencies": {
-    "@klave/sdk": "0.8.0",
+    "@klave/sdk": "0.8.1",
     "as-base64": "0.2.0",
     "assemblyscript": "^0.27.9",
-    "visitor-as": "0.11.4",
-    "typescript": "5.2.2"
+    "path-complete-extname": "^1.0.0",
+    "typescript": "5.2.2",
+    "visitor-as": "0.11.4"
   }
 }
